--- a/nastolnye.html
+++ b/nastolnye.html
@@ -159,164 +159,90 @@
     </div>
     <article class="description-text">
 
-        <h1 id="1">Настольные игры в онлайн казино Джозз</h1>
+        <h1>Настольные игры в онлайн казино Джозз</h1>
         <div class="toc-menu" >
             <span style="font-weight: bold; font-size: 20px;">Содержание:</span>
             <ol >
-                <li><a href="#1">Настольные игры в онлайн казино Джозз</a></li>
-                <li><a href="#2">Особенности настольных онлайн игр в Джозз</a> </li>
-                <li><a href="#3">Преимущества настольных игр в казино</a> </li>
-                <li><a href="#4">Блэкджек онлайн правила</a> </li>
-                <li><a href="#5">Онлайн рулетка в казино</a> </li>
-                <li><a href="#6">Правила игры в Баккара в Джозз</a> </li>
-                <li><a href="#7">Крэпс - особености игры в онлайн казино</a> </li>
-                <li><a href="#8">Бесплатная игра и игра на деньги в Джозз казино</a> </li>
-                <li><a href="#9">Настольные онлайн игры мобильная версия</a> </li>
+                <li><a href="#pravila-nastolnyh-igr">Правила игры</a></li>
+                <li><a href="#online-poker">Онлайн покер</a> </li>
+                <li><a href="#online-blackjack">Онлайн блэкджэк</a> </li>
+                <li><a href="#online-ruletka">Онлайн рулетка</a> </li>
+                <li><a href="#online-baccara">Онлайн баккара</a> </li>
+                <li><a href="#osnovnye-otlichiya-nastolnyh-igr">Основные отличия</a> </li>
+                <li><a href="#preimushestva-nastolnyh-igr">Преимущества</a> </li>
+                <li><a href="#besplatnaya-igra">Бесплатная игра</a> </li>
+                <li><a href="#igra-na-dengi">Игра на деньги</a> </li>
+                <li><a href="#mobilnaya-versiya">Мобильная версия</a> </li>
             </ol>
         </div>
-        <p>Официальный сайт <a href="/">Jozz казино</a> – это более 1000 азартных игр на любой вкус, щедрая программа лояльности и увлекательные промо-акции.
-            Казино работает лишь с проверенными провайдерами, являющимися безусловными лидерами в отрасли.
-            В ассортименте игроки найдут не только <a href="/avtomaty">автоматы</a>, здесь представлен также большой выбор настольных игр, включающих рулетку, кости, <a href="/poker">покер</a> и ряд других.
-            Для удобства поиска они размещены в одноименном разделе сайта.
-            Высочайшее качество графики и звука, продуманный до мелочей интерфейс, большая вероятность выигрыша обеспечивают популярность настольным играм онлайн.</p>
-        <h2 id="2">Особенности настольных онлайн игр в Джозз</h2>
-        <p> Современные онлайн игры отличаются от своих оффлайн версий тем, что оппонентом игроков в них является компьютер, а не живой человек.
-            Исход игры здесь определяется генератором случайных чисел, что обеспечивает спонтанность и честность результатов сессий.
-            Если сравнивать настольные игры с видеослотами, здесь игрокам предстоит не просто вращать барабаны и дожидаться выпадения призовой комбинации, а просчитывать все свои шаги и ставки наперед и, конечно же,
-            внимательно изучить правила игры. Потребуется немало времени, чтобы проверить на практике различные стратегии и найти выигрышную.
-            Для этого в Jozz Casino предусмотрена возможность бесплатной игры. Демо позволяет игрокам как следует подготовиться к игре на деньги и узнать о всех особенностях того или иного автомата.</p>
-        <h2 id="3">Преимущества настольных игр в казино</h2>
-        <p>Настольные игры чаще всего предпочитают опытные гемблеры, а также те, кто хочет испытать не только удачу, но еще и проверить смекалку или приобретенные игровые навыки.
-            Чтобы научиться хорошо играть в карточные азартные игры, следует уделить тренировке достаточно много времени.
-            Но в результате это позволит получать выплаты регулярно. В любом случае настольные игры – отличная возможность расширить представление об игровых автоматах и побороться за хорошие выплаты в новом формате.
-            Среди самых главных их преимуществ:</p>
-        <ol class="description-list">
-            <li>Имитация игры против реального оппонента позволяет окунуться в атмосферу наземного казино без необходимости покидать пределы собственного дома;</li>
-            <li>Наличие бонусов в слотах дает возможность выигрывать чаще и более крупные суммы;</li>
-            <li>Список настольных игр в Jozz регулярно пополняется свежими новинками.</li>
-        </ol>
+        <p>Почти все игры, в которые можно поиграть в оффлайн казино, доступны и в интернете. Не исключение и настольные игры. 
+            Почитателям покера, рулетки, блэкджека и подобных игр теперь не нужно выходить за пределы своего дома, чтобы насладиться азартом. 
+            Достаточно зайти на <a href="/">официальный сайт казино Джозз</a>. На нем размещено свыше 2500 азартных развлечений, среди которых и категория со столами. 
+            На сайте собраны лучшие среди карточных и настольных игр, выпущенных разработчиками Microgaming, Betsoft, Habanero, Net Entertainment, Play’n Go, 
+            и Spinomenal.</p>
+<h2 id="pravila-nastolnyh-igr">Правила игры в настольные игры казино Джозз</h2>
+<p>В Jozz доступен демонстрационный режим настольных игр, что позволяет игрокам подобрать подходящий слот и без каких-либо затрат разобраться в его правилах. 
+    Совершая ставки в реальной валюте игроки смогут получить настоящие выплаты и воспользоваться <a href="/bonusy">бонусами казино Джозз</a>. Версии на деньги открыты для авторизованных 
+    на сайте гемблеров.</p>
+<h3 id="online-poker">Poker</h3>
+<p>Покер требует большой концентрации внимания и имеет ряд правил, без которых одержать победу в этой игре практически невозможно. 
+    Для того чтобы выиграть, придется тщательно продумать свои ставки и действия. От участника требуется собрать лучший карточный расклад 
+    или сделать так, чтобы его оппонент ушел в пас. Покер понравится тем игрокам, которые не просто хотят расслабиться и приятно провести досуг, 
+    но и применить приобретенные умения. На сайте казино Jozz представлено несколько разновидностей покера, правила в которых могут варьироваться. 
+    В число самых популярных покеров казино входят: Texas Hold’em, Pai Gow, Draw Poker, а также другие. 
+    Гемблерам предлагается выбор между бесплатным режимом и на деньги.</p>
 
 
-            <img src='/img/table.webp'  title='Jozz Casino' alt='Jozz Casino - Джозз казино'>
 
-        <h2 id="4">Блэкджек онлайн правила</h2>
-        <p>Блэкджек, известный также под названием «21», имеет простые правила, с которыми быстро разберутся даже новые игроки.
-            Задача участника – собрать на руках такую комбинацию карт, сумма которой будет равняться 21 или максимально приближенной к этому числу. Важно побить расклад дилера, но не перебрать при этом.
-            Здесь есть возможность сбрасывать карты и получать 50% от суммы ставки, делать сплит и удваивать сумму, поставленную на кон. Крупье разрешено добирать карты, пока количество его очков не составит 18.</p>
-        <h2 id="5">Онлайн рулетка в казино</h2>
-        <p>Признанная классика настольных игр, пришедшая на виртуальные столы непосредственно с наземных.
-            Атрибутами рулетки является вращающееся колесо, разделенное на сектора, и шарик, который, остановившись на одном из них, определяет победителей.
-            Перед запуском вращения участники имеют возможность поставить фишки на одно или несколько чисел, четные или нечетные номера, а также красное или черное.
-            Существует несколько разновидностей рулетки, но наибольшей популярностью пользуются американская, европейская и французская.
-            Все они представлены в казино Jozz в бесплатной демо версии и с режимом игра на деньги. Играть в рулетку онлайн на деньги есть возможность у зарегистрированных игроков.</p>
-        <div class="game-list">
-            <a  title="Divine Fortune" class="game-list__item">
-                <p class="game-text">Divine Fortune</p>
-                <div class="game-list__item-img">
+            <img src='/img/table.webp'  title='настольные игры казино Jozz' alt='настольные игры казино Jozz'>
 
-                        <img src='/img/divine.webp'  title='Divine Fortune' alt='Divine Fortune'>
-
-                </div>
-            </a>
-            <a  title="Dead or Alive" class="game-list__item">
-                <p class="game-text">Dead or Alive</p>
-                <div class="game-list__item-img">
-
-                        <img src='/img/alive.webp'  title='Dead or Alive' alt='Dead or Alive'>
-
-                </div>
-            </a>
-            <a  title="Dead or Alive 2" class="game-list__item">
-                <p class="game-text">Dead or Alive 2</p>
-                <div class="game-list__item-img">
-
-                        <img src='/img/dead.webp'  title='Dead or Alive 2' alt='Dead or Alive 2'>
-
-                </div>
-            </a>
-            <a  title="Sakura Fortune" class="game-list__item">
-                <p class="game-text">Sakura Fortune</p>
-                <div class="game-list__item-img">
-
-                        <img src='/img/sakura.webp'  title='Sakura Fortune' alt='Sakura Fortune'>
-
-                </div>
-            </a>
-            <a  title="Fat Santa" class="game-list__item">
-                <p class="game-text">Fat Santa</p>
-                <div class="game-list__item-img">
-
-                        <img src='/img/fat.webp'  title='Fat Santa' alt='Fat Santa'>
-
-                </div>
-            </a>
-            <a  title="Gonzo's Quest MW" class="game-list__item">
-                <p class="game-text">Gonzo's Quest MW</p>
-                <div class="game-list__item-img">
-
-                        <img src='/img/gonzo.webp'  title='Gonzos Quest MW' alt='Gonzos Quest MW'>
-
-                </div>
-            </a>
-            <a  title="Book of Souls" class="game-list__item">
-                <p class="game-text">Book of Souls</p>
-                <div class="game-list__item-img">
-
-                        <img src='/img/book.webp'  title='Book of Souls' alt='Book of Souls'>
-
-                </div>
-            </a>
-            <a  title="Extra Chilli" class="game-list__item">
-                <p class="game-text">Extra Chilli</p>
-                <div class="game-list__item-img">
-
-                        <img src='/img/extra.webp'  title='Extra Chilli' alt='Extra Chilli'>
-
-                </div>
-            </a>
-            <a  title="Nights of Egypt" class="game-list__item">
-                <p class="game-text">Nights of Egypt</p>
-                <div class="game-list__item-img">
-
-                        <img src='/img/nights.webp'  title='Nights of Egypt' alt='Nights of Egypt'>
-
-                </div>
-            </a>
-            <a  title="Egyptian Rebirth 2" class="game-list__item">
-                <p class="game-text">Egyptian Rebirth 2</p>
-                <div class="game-list__item-img">
-
-                        <img src='/img/rebith.webp'  title='Egyptian Rebirth 2' alt='Egyptian Rebirth 2'>
-
-                </div>
-            </a>
-            <a class="game-list__item _add">
-                <div class="game-list__item-img">
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                </div>
-                <span class="game-list__item-name">Показать еще</span>
-            </a>
-        </div>
-        <h2 id="6">Правила игры в Баккара в Джозз</h2>
-        <p>Это карточная игра, в которой участники, имея на руках две или три карты, стремятся набрать не более девяти очков и побить расклад дилера.
-            В баккара принимаются ставки на одно из трех полей: Player (Игрок), Bank (победа дилера) или Tie (Ничья).
-            В онлайн казино Джозз игра в баккару представлена в разнообразных версиях – с различным количеством игроков и колод, а иногда и правилами раздачи.</p>
-        <h2 id="7">Крэпс - особености игры в онлайн казино</h2>
-        <p>Многие знают эту игру под названием «Кости». В отличие от большинства карточных игр, участникам здесь не нужно думать над разработкой стратегий и просчетов своих дальнейших ходов.
-            Исход здесь всецело зависит от удачи. Крэпс отличается простыми правилами. Игрокам необходимо сделать ставки, после чего они бросают кости.
-            В крэпсе есть большое поле для ставок, где участникам предлагается сделать до десяти ставок на одну игру.</p>
-        <h2 id="8">Бесплатная игра и игра на деньги в Джозз казино</h2>
-        <p>Большинство настольных игр, представленных на сайте казино Джозз, доступны в демонстрационном режиме.
-            Сыграть в них есть возможность без регистрации и <a href="/platezhi">пополнения счета и внесения денег</a>.
-            Перейдите в раздел с настольными играми, выберите подходящую, нажмите на кнопку «Демо» и приступайте к бесплатной игре.
-            Потерять деньги в таком случае невозможно, но и выиграть тоже не получится. Игра на деньги доступна в любой момент после <a href="/registraciya">регистрации в Джозз казино</a>.
-            Запуская рулетку, баккара, блэкджек или покер на реальные деньги, получить выигрыш легко.
-            В онлайн казино Jozz перед игроками открывается масса дополнительных возможностей, среди которых разнообразные <a href="/bonusy">бонусы</a>, интересные акции и тематические турниры. </p>
-        <h2 id="9">Настольные онлайн игры мобильная версия</h2>
-        <p>Онлайн казино Джозз предлагает мобильную версию сайта, адаптированную под экраны любых современных смартфонов и планшетов.
-            Мобильная версия не уступает по своим возможностям десктопной и позволяет играть в настолки и видеослоты откуда угодно.
-            Настольные игры в Jozz – хороший способ провести время. Играть в онлайн рулетку, баккара, крэпс и блэкджек интересно, и выгодно.
-            Запускайте любую из них, чтобы получить крупный выигрыш.</p>
+     <h3 id="online-blackjack">Blackjack</h3>
+<p>Блэкджек - карточная игра, которую еще называют «21». Его правила довольно просты, поэтому блэкджек популярен даже среди гемблеров, которые играют недавно. 
+    Для победы в игре нужно собрать двадцать одно очко или же выигрыш остается за участником, собравшим максимально близкое к указанному значение. 
+    В случае перебора игрок проигрывает. Условия игры, лимиты ставок в версиях блэкджека различаются. 
+    В онлайн казино Джозз предлагается воспользоваться демо режимом для того, чтобы узнать подробнее о правилах и возможностях игры.</p>
+<h3 id="online-ruletka">Roulette</h3>
+<p>Рулетка - одно из самых популярных азартных развлечений. Ее часто называют королевой азарта из-за непредсказуемости. 
+    Для игры используется стол с полями для ставок, вращаемое колесо и шарик, который перемещается по нему и определяет исход партии, завершив свое движение. 
+    От участников требуется поставить на 1 или более раскладов, и дождаться остановки шарика. Если ставка сыграла - участник получает выигрыш. 
+    В онлайн казино Jozz предлагается несколько разновидностей рулетки:</p>
+<ul>
+<li>French Roulette - с колесом, разделенным на тридцать семь зон. При попадании шарика на зеро игрок вернет полставки;</li>
+<li>European Roulette - с таким же как и во французском варианте колесом, но при размещении шарика на 0, игрок теряет ставку;</li>
+<li>American Roulette - отличается от остальных наличием на колесе секции «00». Когда шар выпадает на нее или на 0, все ставки игрока считаются проигрышными.</li>
+</ul>
+<p>Начинающим игрокам в рулетку предпочтительнее остановить свой выбор на версии без двойного зеро с более высокими шансами на получение выигрыша. 
+    В рулетку на сайте казино Jozz предлагается играть в рулетку онлайн на деньги или бесплатно, чтобы узнать подробнее правила и разработать свою тактику игры, 
+    экспериментируя с разными стратегиями.</p>
+<h3 id="online-baccara">Baccarat</h3>
+<p>История игры в баккару уходит корнями в Средние века. Партия происходит за специально размеченным столом с фишками. 
+    Игрокам нужно при помощи полученных карт собрать максимальное количество очков. Победа остается за участником, сумма очков которого превзойдет комбинацию дилера. 
+    Если в комбинации 10 и более очков – игрок проигрывает. Ставки принимаются на победу одного или второго участника, или ничью. 
+    Гемблер получает выплату, если сумел правильно определить исход игры.</p>
+<h2 id="osnovnye-otlichiya-nastolnyh-igr">Отличительные черты настолок</h2>
+<p>Подборка Jozz казино представлена различными рулетками, покером, баккара, блэкджеком и прочими играми за столами. 
+    Преимущество казино в настольных играх обычно составляет менее 5%. Игры наземных казино ведутся с участием дилера или других гемблеров, 
+    а онлайн версии отличаются тем, что в них в качестве оппонента участника выступает ГСЧ. Если взять для сравнения <a href="/avtomaty">игровые автоматы</a>, то, в противоположность им, 
+    настолки требуют от гемблера понимания правил и погружения в игру. Наличие бесплатных демо в казино Джозз у гемблеров обеспечивает игрокам возможность 
+    сыграть в различные виды настолок и выбрать наиболее подходящую для себя.</p>
+<h2 id="preimushestva-nastolnyh-igr">Преимущества настольных игр</h2>
+<p>Игре в настольные игры казино отдают предпочтение игроки с опытом и те, кто рассчитывает не только на удачу, а привык влиять на ход игры, 
+    хорошо знаком с правилами и пользуется различными стратегиями. Научиться хорошо играть онлайн и часто выигрывать в настольные игры можно, 
+    уделив внимание тренировке. Моделирование партии против настоящего соперника позволяет гемблерам, выбравшим игру за столами, получить опыт, 
+    отличающийся от того, к которому привыкли игроки в видеослоты, где нужно просто запустить спины и подождать образования призовой комбинации.</p>
+<h2 id="besplatnaya-igra">Бесплатный режим игры</h2>
+<p>В казино Jozz в настольные игры можно играть бесплатно без регистрации. Пополнять счет в таком случае не понадобится. 
+    Выбор бесплатной игры в казино станет подходящим вариантом для гемблеров, пока не готовых тратить на ставки собственные деньги, тех, 
+    кто находится в процессе выбора подходящей игры, учится играть, узнает правила размещенных на сайте слотов или прорабатывает игровые стратегии.</p>
+<h2 id="igra-na-dengi">Игра с реальными ставками</h2>
+<p>Поиграв в демонстрационных версиях, начинайте играть на деньги онлайн, чтобы получить возможность вывода выигрышей. 
+    Все настольные игры имеют низкое, в отличие от игр других категорий, преимущество казино, благодаря чему шансы гемблера получить выигрыш увеличиваются. 
+    Проходите регистрацию в казино Джозз, пополняйте счет, активируйте бонусы, получайте большие выигрыши и выводите их из казино в течение 2-8 часов.</p>
+<h2 id="mobilnaya-versiya">Мобильная версия казино Джозз</h2>
+<p>Онлайн казино Джозз имеет мобильную версию сайта, адаптированную под экраны любых современных смартфонов и планшетов. 
+    <a href="/mobilnaya-versiya">Мобильная версия казино</a> полностью повторяет возможности десктопной и позволяет играть в настольные игры и автоматы без привязки к ПК. 
+    Игра в онлайн покер, рулетку, баккара и блэкджек выгодна и интересна, но каждому гемблеру следует соблюдать принципы ответственной игры, 
+    чтобы избежать развития лудомании. Регистрируйтесь на официальном сайте или с помощью <a href="/zerkalo">казино Джозз рабочего зеркала</a>, чтобы выигрывать и выводить деньги.</p>
 
         <span>Читайте также:</span>
         <div class="game-list">
