--- a/start-bonus.html
+++ b/start-bonus.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon"  href="/img/favicon.ico" />
-    <title>Ответственная игра в Джозз казино - как предотвратить Лудоманию</title>
+    <title>Стартовый бонус официального сайта и рабочего зеркала онлайн казино Джозз</title>
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="Стартовый бонус официального сайта и рабочего зеркала онлайн казино Джозз"/>
     <meta name="description" content="Получить бонус за регистрацию, стартовый бонус от казино Джозз как вывести бонус без отыгрыша с официального сайта Casino Jozz"/>
